🚀 Deploy: Prod 배포
* :sparkles: Feat: User 도메인의 기본 클래스들 추가

* :sparkles: Feat: User 관련 인터페이스 및 클래스

* :heavy_plus_sign: Dependencies: Redis, Email

* :wrench: Settings: 외부 설정 적용 Properties

* :wrench: Settings: ConfigurationPropertiesScan 어노테이션 추가

* :recycle: Refactor: CorsConfig 외부 설정 분리

* :recycle: Refactor: SwaggerConfig 외부 설정 분리

* :sparkles: Feat: AsyncConfig 추가

* :sparkles: Feat: MailConfig 추가

* :sparkles: Feat: RedisConfig 추가

* :sparkles: Feat: 이메일 관련 Controller API 추가

* :sparkles: Feat: 이메일 관련 RequestDto 추가

* :sparkles: Feat: Auth-Email 관련 ErrorCode 추가

* :sparkles: Feat: AuthMapper 추가

* :sparkles: Feat: 이메일 관련 서비스 로직 추가

* :wrench: Settings: 외부 설정 추가(mail, data, server)

* :sparkles: Feat: Controller 추가

* :sparkles: Feat: User Entity 추가

* :sparkles: Feat: UserRepository 추가

* :sparkles: Feat: UserService 추가

* :sparkles: Feat: 권한, 역할, 파트 추가

* :sparkles: Feat: 구성원 엔티티 추가

* :wrench: Settings: ddl-auto Update 추가

* :sparkles: Feat: Auth 관련 기능 추가(이메일 관련 기능, 회원가입, 로그인)

* :heavy_plus_sign: Dependencies: Redis, Email

* :wrench: Settings: 외부 설정 적용 Properties

* :wrench: Settings: ConfigurationPropertiesScan 어노테이션 추가

* :recycle: Refactor: CorsConfig 외부 설정 분리

* :recycle: Refactor: SwaggerConfig 외부 설정 분리

* :sparkles: Feat: AsyncConfig 추가

* :sparkles: Feat: MailConfig 추가

* :sparkles: Feat: RedisConfig 추가

* :sparkles: Feat: 이메일 관련 Controller API 추가

* :sparkles: Feat: 이메일 관련 RequestDto 추가

* :sparkles: Feat: Auth-Email 관련 ErrorCode 추가

* :sparkles: Feat: AuthMapper 추가

* :sparkles: Feat: 이메일 관련 서비스 로직 추가

* :wrench: Settings: 외부 설정 추가(mail, data, server)

* :bug: Fix: AutoConfigure 추가

* :memo: Docs: PR템플릿 수정(이미지칸 추가)

* :sparkles: Feat: JWT 관련 기능 추가

* :wrench: Settings: JwtProperties 추가

* :heavy_plus_sign: Dependency: Jwt 추가

* :sparkles: Feat: JpaAuditing 어노테이션 추가

* :sparkles: Feat: 회원가입, 로그인 기능 추가

* :recycle: Refactor: Valid 유효성 검사 추가

* :recycle: Refactor: Valid 유효성 검사 추가

* :recycle: Refactor: Valid 유효성 검사 추가

* :sparkles: Feat: AuthErrorCode